# pyweather

./: .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
core/: client.py
core/models/: __init__.py  common_fields.py  current.py  direct_geocoding.py  forecast.py  geocoding.py  zipcode_geocoding.py
core/utils/: exceptions.py  weather_path.py
pyweather/: client.py
pyweather/models/: air_pollution.py
pyweather/utils/: exceptions.py  weather_path.py
tests/samples/: air_pollution.json  direct_geocoding.json  geocoding.json  reverse_geocoding.json
tests/unit/: test_client.py
