[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyweather"
version = "0.0.1"
authors = [
  { name="jordan95v", email="author@example.com" },
]
description = "Wrapper for OpenWeatherMap API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jordan95v/pyweather"
"Bug Tracker" = "https://github.com/jordan95v/pyweather/issues"