[tool:pytest]
addopts = -vv --tb=short

[coverage:report]
skip_empty = true

[metadata]
name = pyweather
version = 1.2
author = jordan95v
author_email = null
url = https://github.com/jordan95v/pyweather
description = Wrapper for OpenWeatherMap API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    httpx == 0.23.0
    pydantic == 1.10.2
